--- a/livrariaNikau/public/css2/styles.css
+++ b/livrariaNikau/public/css2/styles.css
@@ -22,3 +22,9 @@ nav {
     font-size: 20px;
 }
 
+.parte1 {
+    font-family: "Roboto", sans-serif;
+    text-align: center;
+    margin-top: 3vh;
+}
+
