--- a/livrariaNikau/public/css2/styles.css
+++ b/livrariaNikau/public/css2/styles.css
@@ -1,17 +1,28 @@
 body {
-    background-color: rgb(255, 235, 248);
+    background-color: rgb(242, 233, 221);
+    margin: 0px;
+    padding: 0px;
+    left: 0px;
+    right: 0px;
 
 }
+ .fundo {
+  width: 1200px;
+  height: 1100px;
+  margin-right: 5px;
+} 
 
-nav {
-    background-color: #a8eaef;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    position: static;
-    font-family: "roboto", sans-serif;
-    color: rgb(16, 16, 16);
-    display: flex;
+.navbar {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    
+    position: relative;
+    background-color: rgba(57, 38, 15, 0.934);
+}
+
+.nav-link {
+    color: antiquewhite;
 }
 
 #navbarNav{
@@ -20,11 +31,26 @@ nav {
     align-items: center;
     text-align: center;
     font-size: 20px;
+    color: antiquewhite;
 }
 
-.parte1 {
-    font-family: "Roboto", sans-serif;
-    text-align: center;
-    margin-top: 3vh;
+.primeiro {
+    height: 90px;
+    background-color: rgb(21, 18, 15);
+    font-family: "Poppins", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+    color: antiquewhite;
+}
+
+.nikau {
+    margin-left: 5vh;
+}
+
+.titleNav {
+    background-color: rgb(21, 18, 15);
+    font-family: "Poppins", sans-serif;
+    font-weight: 700;
+    padding: 20px;
 }
 
