--- a/livrariaNikau/public/css2/welcome.css
+++ b/livrariaNikau/public/css2/welcome.css
@@ -92,10 +92,102 @@
     margin-top: 8vh;
     flex-direction: row;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
 }
 
 .card {
     width: 500px;
-    height: 400px;
+    background-color: transparent;
+    border: none;
+    height: 30rem;
+    text-align: center;
+    
+    
+}
+
+.card img {
+    width: 70%;
+    height: 100%;
+}
+.img-area {
+    width: 100%;
+    height: 300px;
+    display: flex;
+
+    justify-content: center;
+    align-items: center;
+}
+.card-title {
+    font-family: "Poppins", sans-serif;
+}
+
+
+.cardprin2 {
+    margin-top: 8vh;
+    flex-direction: row;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+
+
+
+.ads {
+    background-color: aqua;
+}
+
+.card-text {
+    font-size: 20px;
+    font-family: "Poppins", sans-serif;
+    color: rgb(0, 0, 0);
+}
+
+.btn {
+    background-color: transparent ;
+    color:rgb(34, 24, 0);
+    font-family: "Poppins", sans-serif;
+    border-radius: 30px;
+    border-color: rgb(34, 24, 0);
+    font-weight: 600;
+    font-style: normal;
+
+}
+
+.btn:hover {
+    background-color: rgb(34, 24, 0);
+    color: antiquewhite;
+    border-color: antiquewhite;
+    font-weight: 600;
+    font-style: normal;
+}
+
+.modal-body {
+    display: flex;
+    flex-direction: column;
+
+}
+
+.modal-body img {
+    flex-direction: row;
+    width: 200px;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+
+.foto img {
+    flex-direction: row;
+    width: 200px;
+    height: 300px;
+    justify-content: center;
+    align-items: center;
+}
+
+.assunto {
+    font-size: 20px;
+    font-family: "Poppins", sans-serif;
+    border-color: rgb(0, 0, 0);
+    font-weight: 500;
+    font-style: normal;
+
 }
