--- a/livrariaNikau/public/css/cadastro.css
+++ b/livrariaNikau/public/css/cadastro.css
@@ -1,11 +1,108 @@
+body {
+    background-image: url(../img/livros25.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
-#formulario{
-    position: relative;
-    background-color: #9d818928;
+.tudoform {
+    background-color: rgba(32, 16, 1, 0.895);
+    justify-content: center;
+    display: flex;
     align-items: center;
-    align-content: center;
-    border-radius: 15%;
-    height: 100vh;
-    width: 98vh;
-    left: 25%;
+    width: 40%;
+    height: 700px;
+    margin: 10vh auto; 
+    border-radius: 5%;
+}
+
+
+.titulo {
+    justify-content: start;
+    display: flex;
+    margin-bottom: 3vh;
+    flex-direction: column;
+    display: flex;
+}
+
+.titulo h1 {
+    flex-direction: row;
+    font-size: 50px;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    color: antiquewhite;
+ }
+
+
+.titulo h3 {
+   flex-direction: row;
+   font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    color: antiquewhite;
+}
+
+.form-control {
+    flex-direction: column;
+    display: flex;
+    background-color: transparent;
+    border: none;
+}
+
+.form-control input {
+    border-radius: 30px;
+    background-color: rgba(250, 235, 215, 0.615);
+    height: 40px;
+}
+
+.textinho {
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    color: antiquewhite;
+    font-size: 25px;
+}
+
+.primeiravez {
+    text-align: center;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    color: rgb(170, 141, 103);
+    font-size: 25px;
+    margin: 5px;
+}
+
+.botao {
+    background-color: rgb(109, 78, 35);
+    color: antiquewhite;
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 25px;
+    border-radius: 30px;
+    width: 200px;
+    height: 50px;
+    border: none;
+
+}
+
+.botaogeral {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    margin-top: 1vh;
+}
+
+.botaoCadastro {
+    background-color: antiquewhite;
+    color: rgb(109, 78, 35);
+    font-family: "Poppins", sans-serif;
+    font-weight: 600;
+    font-size: 15px;
+    border-radius: 30px;
+    width: 100px;
+    height: 40px;
+    border: none;
+}
+
+p {
+    color: antiquewhite;
+    font-family: "Poppins", sans-serif;
+    font-weight: 400;
 }
